fix(ui): correct button positioning in overview card on mobile view
The buttons were overflowing the boundary of the overview card in mobile view,
causing the card to not take the full width. This fix ensures proper button
alignment and restores the card to its intended size.

--- a/src/app/components/pokemon-list/pokemon-list.component.scss
+++ b/src/app/components/pokemon-list/pokemon-list.component.scss
@@ -43,6 +43,7 @@ app-pokemon-popup {
 @media screen and (max-width: 768px) {
   .overview {
     padding-inline: 20px;
+
     .overview-button {
       font-size: 30px;
       margin-inline: -24px;
@@ -52,15 +53,24 @@ app-pokemon-popup {
 
 @media screen and (max-width: 520px) {
   app-pokemon-popup {
-    width: 100vw;
-    height: 100vh;
+    height: inherit;
   }
 
   .overview {
     padding-inline: unset;
+
     .overview-button {
+      position: absolute;
+      top: 50%;
+      left: 35px;
+      z-index: 10;
       font-size: 30px;
       margin-inline: -24px;
+
+      &:last-child {
+        left: unset;
+        right: 35px;
+      }
     }
   }
 }
